<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:id="@+id/rootLayout"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".cuenta.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:gravity="center_vertical|right"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/str_login"
            android:textColor="@color/md_black_1000"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="356dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="#9f9f9f"
                android:textSize="15sp">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="#9b5200"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#9f9f9f"
                android:textSize="15sp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#9b5200"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_select_empresa"
                android:padding="10dp"
                android:weightSum="3"
                android:onClick="expandSelectEmpresa"
                android:visibility="gone">

                <TextView
                    android:id="@+id/lblEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_empresa"
                    style="@style/titulo"
                    android:textColor="@color/md_grey_400"
                    android:layout_weight="2"
                    android:textSize="@dimen/lbl_info_elemento_planificador"/>

                <Spinner
                    android:id="@+id/spEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/empresa" />
            </LinearLayout>

            <Button
                android:id="@+id/btnIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/md_green_1000"
                android:shadowColor="#000000"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="@string/str_login"
                android:textColor="@color/md_white_1000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegistrarUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/white"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:text="Registrar"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                 />

            <TextView
                android:id="@+id/txtSolicitarPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:shadowColor="#000000"
                android:text="¿Has olvidado tu contraseña?"
                android:textColor="#ffffff"
                android:textSize="15dp" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/lblRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:textColor="@color/md_white_1000" />
</RelativeLayout>